--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <html>
   <head>
     <meta content="text/html; charset=windows-1252" http-equiv="content-type">
-    <title>Sample "Hello, World" Application</title>
+    <title>Razvan Valentin Marinescu - Medical Imaging CDT - UCL</title>
+
   </head>
   <body style="  background-color: white;">Razvan Valentin Marinescu<br>
     <br>
     PhD student at University College London<br>
     <br>
+    
+    <img src="razvan_marinescu.png" alt="My picture" style="height:300px;">
+    <br><br>
+    <!--<ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
+    </ul> -->
+
     Education: 2010-2014 Imperial College, London<br>
     <br>
     Imperial MEng Thesis, 2014: <a href="ImperialMEngThesis.pdf">"On a new
