added IPMI paper

--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@
       <li><a href="research.html">Research</a></li>
     </ul> -->
 
-    Education: 2010-2014 Imperial College, London<br>
+    <b>Education: 2010-2014 Imperial College, London</b><br>
     <br>
     Imperial MEng Thesis, 2014: <a href="ImperialMEngThesis.pdf">"On a new
       signature that quantifies topological structure in biological and economic
       networks"</a>. Project source code and network data available <a href="https://github.com/mrazvan22/gcv_indiv_proj">
-      here </a>: <br>
+      here </a>
+
+    <br>
+    <br>
+    <b>Papers</b>
+    <br>
+    <a href="MarinescuIPMI2017.pdf">A Vertex Clustering Model for Disease Progression: Application to Cortical Thickness Images, IPMI, 2017</a>
+
+
+     <br>
     <br>
     <br>
   </body>
