--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110173423-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-110173423-1');
+    </script>
     <meta content="text/html; charset=windows-1252" http-equiv="content-type">
     <title>Sample "Hello, World" Application</title>
   </head>
